# TomlCppGenerator

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  tetris.py  toml_cpp_generator.py  toml_generate_cpp.cmake  vcpkg.json
TomlCppGenerator_Example/: CMakeLists.txt  tetris.toml
TomlCppGenerator_Example/src/: main.cpp
include/tomlgen/: util.h
src/: util.h
